--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "\n",
     "def mean_square_error(a,b):\n",
-    "    mse = MSE = sum((a-b)**2)\n",
+    "    mse = MSE = sum((a-b)**2)/len(a)\n",
     "    return mse\n",
     "MSE=mean_square_error(y,y_hat)\n",
     "print(\"The Mean Square Error is %.3f\" % (MSE))\n",
